--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: php
 php:
-  - '5.4'
-  - '5.5'
   - '5.6'
-  - '7.0'
   - '7.1'
-  - hhvm
-  - nightly
+#  - hhvm
+#  - nightly
 before_script:
-  - composer self-update
   - composer install
