--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: php
+
 php:
   - '5.6'
   - '7.1'
-#  - hhvm
-#  - nightly
+
+services:
+  - mysql
+
+before_install:
+  - mysql -e 'CREATE DATABASE api-rest-slimphp;'
+
 before_script:
+  - mysql -uroot -p api-rest-slimphp < database.sql
   - composer install
