--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ services:
   - mysql
 
 before_install:
-  - mysql -e 'CREATE DATABASE api-rest-slimphp;'
+  - mysql -uroot -p -e 'CREATE DATABASE api_rest_slimphp;'
 
 before_script:
-  - mysql -uroot -p api-rest-slimphp < database.sql
+  - mysql -uroot -p api_rest_slimphp < database.sql
   - composer install
