--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
   - mysql -e 'CREATE DATABASE api_rest_slimphp;'
 
 before_script:
-  - mysql api_rest_slimphp < database.sql
+  - mysql api_rest_slimphp < data/database.sql
   - composer install
