--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
             "Tests\\": "tests/"
         }
     },
-	"scripts": {
+    "scripts": {
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
-        "test": "phpunit"
-	}
-
+        "test": "phpunit",
+        "restart": "bin/restart-app.sh"
+    }
 }
