--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,9 @@ before_install:
 before_script:
   - mysql api_rest_slimphp < data/database.sql
   - composer install
+
+script:
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
