--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ before_script:
   - mysql api_rest_slimphp < data/database.sql
   - composer install
 
-script:
-  - vendor/bin/phpunit --whitelist src --coverage-clover=coverage.xml
+addons:
+  code_climate:
+    repo_token: 0e991e38f9941a6bfd8d7876880e8ed04eaf40529f1c120025668e6f5367284d
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - vendor/bin/test-reporter
