--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "respect/validation": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
+        "phpunit/phpunit": "^6.0"
     },
     "autoload-dev": {
         "psr-4": {
