Muevo archivo de bd a app/data/database.sql

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,4 +6,4 @@ build:
     project_setup:
         before:
             - mysql -e "CREATE DATABASE api_rest_slimphp"
-            - mysql api_rest_slimphp < data/database.sql
+            - mysql api_rest_slimphp < app/data/database.sql
