--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "codeclimate/php-test-reporter": "dev-master",
-        "respect/validation": "^1.1"
+        "respect/validation": "^1.1",
+        "symfony/var-dumper": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
