--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,20 @@
 engines:
+  rubocop:
+    enabled: true
+  brakeman:
+   	enabled: true
+  eslint:
+    enabled: true
+  csslint:
+    enabled: true
   duplication:
     enabled: true
+    config:
+    	languages:
+      - php
+ratings:
+  paths:
+  - src/**
+  - "**.php"
+exclude_paths:
+- tests/**/*
