--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,7 @@
-# .scrutinizer.yml
 build:
     environment:
         php:
-            version: 7.1       # Common versions: 5.4, 5.5, 5.6, 7.0, 7.1, or hhvm
+            version: 7.1
     project_setup:
         before:
             - mysql -e "CREATE DATABASE api_rest_slimphp"
