--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,3 +6,4 @@ build:
         before:
             - mysql -e "CREATE DATABASE api_rest_slimphp"
             - mysql api_rest_slimphp < app/data/database.sql
+            - php-scrutinizer-run
