--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "slim/slim": "^3.1",
         "monolog/monolog": "^1.17",
         "respect/validation": "^1.1",
-        "palanik/corsslim": "dev-slim3"
+        "palanik/corsslim": "dev-slim3",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
