--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
     "require-dev": {
         "phpunit/phpunit": "^6.0"
     },
-    "autoload": {
+    "autoload-dev": {
         "psr-4": {
-            "App\\": "src/",
-            "Tests\\": "tests/"
+            "App\\": "src",
+            "Tests\\": "tests"
         }
     },
     "scripts": {
