--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "src",
-            "Tests\\": "tests"
+            "App\\": "src/",
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
