--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require-dev": {
         "phpunit/phpunit": "^6.0"
     },
-    "autoload-dev": {
+    "autoload": {
         "psr-4": {
             "App\\": "src/",
             "Tests\\": "tests/"
