--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "phpstan/phpstan": "^0.10.1"
     },
     "autoload": {
         "psr-4": {
