--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "monolog/monolog": "^1.17",
         "respect/validation": "^1.1",
         "palanik/corsslim": "dev-slim3",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
