Updated README files + .env file.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DB_HOSTNAME = '127.0.0.1'
-DB_DATABASE = 'api_rest_slimphp'
+DB_DATABASE = 'rest_api_slim_php'
 DB_USERNAME = 'root'
 DB_PASSWORD = ''
