Added 2 new env vars.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ DB_HOSTNAME = '127.0.0.1'
 DB_DATABASE = 'rest_api_slim_php'
 DB_USERNAME = 'root'
 DB_PASSWORD = ''
+
+DISPLAY_ERROR_DETAILS = true
+LOGGER_ENABLED = true
