--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ DB_PASSWORD = ''
 DISPLAY_ERROR_DETAILS = true
 LOGGER_ENABLED = true
 APP_DOMAIN = 'https://www.yourdomain.com'
+USE_REDIS_CACHE = false
