Added env var to set redis url host.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ DISPLAY_ERROR_DETAILS = true
 LOGGER_ENABLED = true
 APP_DOMAIN = 'https://www.yourdomain.com'
 USE_REDIS_CACHE = false
+REDIS_URL = ''
