--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-DB_HOSTNAME = '127.0.0.1'
-DB_DATABASE = 'rest_api_slim_php'
-DB_USERNAME = 'root'
-DB_PASSWORD = ''
+DB_HOSTNAME='127.0.0.1'
+DB_DATABASE='rest_api_slim_php'
+DB_USERNAME='root'
+DB_PASSWORD=''
 
-DISPLAY_ERROR_DETAILS = true
-LOGGER_ENABLED = true
-APP_DOMAIN = 'https://www.yourdomain.com'
-USE_REDIS_CACHE = false
-REDIS_URL = ''
+DISPLAY_ERROR_DETAILS=true
+LOGGER_ENABLED=true
+APP_DOMAIN='https://www.yourdomain.com'
+USE_REDIS_CACHE=false
+REDIS_URL=''
