Update composer.json info.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "api-rest-slimphp",
-    "description": "Example of REST API with Slim PHP micro framework.",
+    "name": "rest-api-slim-php",
+    "description": "Example of REST API with Slim PHP Framework.",
     "keywords": ["php", "slim-micro-framework", "rest-api", "mysql", "slim3", "slim", "rest", "api"],
     "homepage": "https://github.com/maurobonfietti/api-rest-slimphp",
     "license": "MIT",
