--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 php:
   - '7.1'
   - '7.2'
+  - '7.3'
   - hhvm
 
 services:
@@ -12,15 +13,15 @@ env:
   global:
     - CC_TEST_REPORTER_ID=5acc45b5f48d4ca2a5baa0d22ee9a10890b29a76b3ef34a936fdd0ba8c5d7ba8
     - DB_HOSTNAME=127.0.0.1
-    - DB_DATABASE=api_rest_slimphp
+    - DB_DATABASE=rest_api_slim_php
     - DB_USERNAME=root
     - DB_PASSWORD=
 
 before_install:
-  - mysql -e 'CREATE DATABASE api_rest_slimphp;'
+  - mysql -e 'CREATE DATABASE rest_api_slim_php;'
 
 before_script:
-  - mysql api_rest_slimphp < app/data/database.sql
+  - mysql rest_api_slim_php < app/data/database.sql
   - composer install
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter 
   - chmod +x ./cc-test-reporter 
