--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,15 +2,15 @@ build:
     environment:
         variables:
             DB_HOSTNAME: '127.0.0.1'
-            DB_DATABASE: 'api_rest_slimphp'
+            DB_DATABASE: 'rest_api_slim_php'
             DB_USERNAME: 'root'
             DB_PASSWORD: ''
         php:
             version: 7.1
     project_setup:
         before:
-            - mysql -e "CREATE DATABASE api_rest_slimphp"
-            - mysql api_rest_slimphp < app/data/database.sql
+            - mysql -e "CREATE DATABASE rest_api_slim_php"
+            - mysql rest_api_slim_php < app/data/database.sql
         override:
             - php-scrutinizer-run
             -
