--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "respect/validation": "^1.1",
         "palanik/corsslim": "dev-slim3",
         "vlucas/phpdotenv": "^2.4",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "lcobucci/jwt": "^3.2",
+        "firebase/php-jwt": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
