--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
     "scripts": {
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
         "test": "phpunit",
-        "restart": "bin/restart-api.sh"
+        "restart": "extras/bin/restart-api.sh"
     }
 }
