--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - mysql -e 'CREATE DATABASE rest_api_slim_php;'
 
 before_script:
-  - mysql rest_api_slim_php < app/data/database.sql
+  - mysql rest_api_slim_php < database/database.sql
   - composer install
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter 
   - chmod +x ./cc-test-reporter 
