--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ DISPLAY_ERROR_DETAILS=true
 APP_DOMAIN='https://www.yourdomain.com'
 USE_REDIS_CACHE=false
 REDIS_URL=''
+SECRET_KEY='YourSuperSecret-KeY'
