Update docker compose config to restart database.
Use: make db

OLD:

docker-compose exec mysql mysql -e 'DROP DATABASE IF EXISTS rest_api_slim_php ; CREATE DATABASE rest_api_slim_php;'

docker-compose exec mysql bash

mysql rest_api_slim_php < docker-entrypoint-initdb.d/database.sql

docker-compose exec mysql sh -c "mysql rest_api_slim_php < docker-entrypoint-initdb.d/database.sql"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - testingnetwork
     volumes:
       - my-data:/var/lib/mysql
+      - ./database/database.sql:/docker-entrypoint-initdb.d/database.sql
 
 networks:
   testingnetwork:
