--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,16 @@
             "homepage": "https://github.com/maurobonfietti"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
     "require": {
-        "slim/slim": "^3.12.2",
-        "respect/validation": "^1.1",
+        "firebase/php-jwt": "^5.0",
         "palanik/corsslim": "dev-slim3",
-        "vlucas/phpdotenv": "^2.4",
         "predis/predis": "^1.1",
-        "firebase/php-jwt": "^5.0"
+        "respect/validation": "^1.1",
+        "slim/slim": "^3.12.2",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
