New command: composer coverage, to get the code coverage of the app.

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         }
     },
     "scripts": {
+        "coverage": "phpunit --coverage-html=coverage --coverage-text",
         "database": "extras/bin/restart-api.sh",
         "restart": "extras/bin/restart-api.sh",
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
