Adding option to enable/disable redis cache service.

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ DB_PASSWORD=''
 
 DISPLAY_ERROR_DETAILS=true
 APP_DOMAIN='https://www.yourdomain.com'
-REDIS_URL=''
 SECRET_KEY='YourSuperSecret-KeY'
+
+USE_REDIS=false
+REDIS_URL=''
