Minor changes when Redis Service is enabled/disabled.

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ DISPLAY_ERROR_DETAILS=true
 APP_DOMAIN='https://www.yourdomain.com'
 SECRET_KEY='YourSuperSecret-KeY'
 
-USE_REDIS=false
+REDIS_ENABLED=false
 REDIS_URL=''
