--- a/composer.json
+++ b/composer.json
@@ -42,11 +42,15 @@
         }
     },
     "scripts": {
+        "post-create-project-cmd": [
+            "# Copy default environment variables:",
+            "php -r \"copy('.env.example', '.env');\""
+        ],
         "coverage": "phpunit --coverage-html=coverage --coverage-text",
         "database": "extras/bin/restart-api.sh",
+        "phpstan": "./vendor/bin/phpstan analyse src tests --level=6",
         "restart": "extras/bin/restart-api.sh",
         "restart-db": "php extras/bin/restart-db.php",
-        "phpstan": "./vendor/bin/phpstan analyse src tests --level=6",
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
         "test": "phpunit"
     }
