Add minimum-stability and prefer-stable in composer.json

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
             "homepage": "https://github.com/maurobonfietti"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "firebase/php-jwt": "^5.0",
         "palanik/corsslim": "dev-slim3",
