--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "nunomaduro/phpinsights": "^1.14",
         "pestphp/pest": "^0.1.5",
         "phpstan/phpstan": "^0.12",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "rector/rector": "^0.7.26"
     },
     "config": {
         "sort-packages": true,
