Replace 0.0.0.0:8080 for localhost:8080

--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "phpstan": "./vendor/bin/phpstan analyse src tests --level=6",
         "restart": "php extras/bin/restart-db.php",
         "restart-db": "php extras/bin/restart-db.php",
-        "start": "php -S 0.0.0.0:8080 -t public public/index.php",
+        "start": "php -S localhost:8080 -t public public/index.php",
         "test": "phpunit"
     }
 }
