--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
     - DB_DATABASE=rest_api_slim_php
     - DB_USERNAME=root
     - DB_PASSWORD=
+    - DISPLAY_ERROR_DETAILS=true
+    - APP_DOMAIN='https://www.awesome.com.ar'
     - SECRET_KEY=YourSuperSecret-KeY
     - REDIS_ENABLED=true
     - REDIS_URL=localhost
