--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "pestphp/pest": "^0.1.5",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^9.0",
-        "rector/rector": "^0.7.26"
+        "rector/rector": "^0.7.26",
+        "vimeo/psalm": "^3.15"
     },
     "config": {
         "sort-packages": true,
