--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
         ],
         "coverage": "phpunit --coverage-html=coverage --coverage-text",
         "database": "php extras/bin/restart-db.php",
-        "phpstan": "./vendor/bin/phpstan analyse src tests --level=6",
+        "phpstan": "./vendor/bin/phpstan analyse src tests --level=max",
         "restart": "php extras/bin/restart-db.php",
         "restart-db": "php extras/bin/restart-db.php",
         "start": "php -S localhost:8080 -t public public/index.php",
