Adding env var DB_PORT, to allow configure the MySQL port.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DB_HOSTNAME='127.0.0.1'
 DB_DATABASE='rest_api_slim_php'
 DB_USERNAME='root'
 DB_PASSWORD=''
+DB_PORT='3306'
 
 DISPLAY_ERROR_DETAILS=true
 APP_DOMAIN='https://www.yourdomain.com'
