Update and rename some environment variables.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,10 +5,11 @@ build:
                 redis: 4
     environment:
         variables:
-            DB_HOSTNAME: '127.0.0.1'
-            DB_DATABASE: 'rest_api_slim_php'
-            DB_USERNAME: 'root'
-            DB_PASSWORD: ''
+            DB_HOST: '127.0.0.1'
+            DB_NAME: 'rest_api_slim_php'
+            DB_USER: 'root'
+            DB_PASS: ''
+            DB_PORT: '3306'
             SECRET_KEY: 'YourSuperSecret-KeY'
             REDIS_ENABLED: true
             REDIS_URL: 'localhost'
