--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,10 @@
         "vlucas/phpdotenv": "^5.1"
     },
     "require-dev": {
+        "nunomaduro/phpinsights": "^1.14",
         "pestphp/pest": "^0.1.5",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^9.0",
-        "rector/rector": "^0.9.3",
         "vimeo/psalm": "^3.15"
     },
     "config": {
