Require PHP 7.4 or 8.0.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "firebase/php-jwt": "^5.0",
         "palanik/corsslim": "dev-slim3",
         "predis/predis": "^1.1",
