Upgrade composer/composer to version 1.10.22

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4 || ^8.0",
+        "composer/composer": "1.10.22",
         "firebase/php-jwt": "^5.0",
         "palanik/corsslim": "dev-slim3",
         "predis/predis": "^1.1",
