--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4 || ^8.0",
-        "composer/composer": "1.10.23",
+        "php": "^8.0",
         "firebase/php-jwt": "^5.0",
         "palanik/corsslim": "dev-slim3",
         "predis/predis": "^1.1",
@@ -33,7 +32,7 @@
         "vlucas/phpdotenv": "^5.1"
     },
     "require-dev": {
-        "nunomaduro/phpinsights": "^1.14",
+        "nunomaduro/phpinsights": "^2.0",
         "pestphp/pest": "^1.7",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^9.0",
@@ -41,10 +40,7 @@
     },
     "config": {
         "sort-packages": true,
-        "process-timeout": 0,
-        "platform": {
-            "php": "7.4.0"
-        }
+        "process-timeout": 0
     },
     "autoload": {
         "psr-4": {
