--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0",
-        "composer/composer": "2.2",
+        "composer/composer": "^2.0",
         "firebase/php-jwt": "^5.0",
         "palanik/corsslim": "dev-slim3",
         "predis/predis": "^1.1",
