--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "pestphp/pest": "^1.7",
         "phpstan/phpstan": "^1.2",
         "phpunit/phpunit": "^9.0",
-        "rector/rector": "^0.12.4"
+        "rector/rector": "^0.12.4",
+        "vimeo/psalm": "^4.18"
     },
     "config": {
         "sort-packages": true,
