--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "composer/package-versions-deprecated": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "symfony/thanks": true
         }
     },
     "autoload": {
