Update APP_DOMAIN to a more generic and secure domain name :-)

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DB_PASS=''
 DB_PORT='3306'
 
 DISPLAY_ERROR_DETAILS=true
-APP_DOMAIN='https://www.yourdomain.com'
+APP_DOMAIN='https://example.com'
 SECRET_KEY='YourSuperSecret-KeY'
 
 REDIS_ENABLED=false
